--- a/springboot-all-provider/src/main/resources/application.yml
+++ b/springboot-all-provider/src/main/resources/application.yml
@@ -6,16 +6,16 @@ spring:
     name: springboot-all-provider
   dubbo:
     appname: springboot-duboo-provider
-    registry: zookeeper://118.190.216.106:2181
+    registry: zookeeper://localhost:2181
   datasource:
-      url: jdbc:mysql://118.190.216.106:3306/springboot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+      url: jdbc:mysql://localhost:3306/springboot?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
       username: root
       password: fuckallhacker
       driver-class-name: com.mysql.jdbc.Driver
   redis:
     port: 6379
     password: 123456
-    host: 118.190.216.106
+    host: localhost
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
