--- a/springboot-all-consumer/pom.xml
+++ b/springboot-all-consumer/pom.xml
@@ -80,6 +80,13 @@
 			<artifactId>springboot-all-interface</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+
+		<!-- shiro与spring整合依赖 -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
