--- a/springboot-all-provider/pom.xml
+++ b/springboot-all-provider/pom.xml
@@ -104,49 +104,76 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
-			<!--mybatis逆向工程-->
+			<!-- 跳过单元测试 -->
 			<plugin>
-				<groupId>org.mybatis.generator</groupId>
-				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.3.2</version>
-				<dependencies>
-					<dependency>
-						<groupId> mysql</groupId>
-						<artifactId> mysql-connector-java</artifactId>
-						<version>5.1.27</version>
-					</dependency>
-					<dependency>
-						<groupId>org.mybatis.generator</groupId>
-						<artifactId>mybatis-generator-core</artifactId>
-						<version>1.3.2</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>Generate MyBatis Artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<!--允许移动生成的文件 -->
-					<verbose>true</verbose>
-					<!-- 是否覆盖 -->
-					<overwrite>false</overwrite>
-					<!-- 自动生成的配置 -->
-					<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.14</version>
+				<configuration>
+					<imageName>swift/admin</imageName>
+					<dockerDirectory>${project.basedir}</dockerDirectory>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.build.finalName}.jar</include>
+						</resource>
+					</resources>
+				</configuration>
+				<!-- 运行命令 mvn clean package docker:build 打包并生成docker镜像 -->
+			</plugin>
+
+			<!--mybatis逆向工程-->
+			<!--<plugin>-->
+				<!--<groupId>org.mybatis.generator</groupId>-->
+				<!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
+				<!--<version>1.3.2</version>-->
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId> mysql</groupId>-->
+						<!--<artifactId> mysql-connector-java</artifactId>-->
+						<!--<version>5.1.27</version>-->
+					<!--</dependency>-->
+					<!--<dependency>-->
+						<!--<groupId>org.mybatis.generator</groupId>-->
+						<!--<artifactId>mybatis-generator-core</artifactId>-->
+						<!--<version>1.3.2</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>Generate MyBatis Artifacts</id>-->
+						<!--<phase>package</phase>-->
+						<!--<goals>-->
+							<!--<goal>generate</goal>-->
+						<!--</goals>-->
+					<!--</execution>-->
+				<!--</executions>-->
+				<!--<configuration>-->
+					<!--&lt;!&ndash;允许移动生成的文件 &ndash;&gt;-->
+					<!--<verbose>true</verbose>-->
+					<!--&lt;!&ndash; 是否覆盖 &ndash;&gt;-->
+					<!--<overwrite>false</overwrite>-->
+					<!--&lt;!&ndash; 自动生成的配置 &ndash;&gt;-->
+					<!--<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
+
 	<!-- 阿里云maven仓库 -->
 	<repositories>
 		<repository>
